--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div id="f1">
+<h1>Flowers photos</h1>
+<p>information of the flower</p>
+</div>
+	<div id="f2">
+<h1>Roses picture</h1>
+<p>information of the flower</p>
+	</div>
 </body>
 
 </html>
