--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 <p>information of the flower</p>
 </div>
 	<div id="f2">
-<h1>Roses picture</h1>
+<h1>Roses pictures</h1>
 <p>information of the flower</p>
 	</div>
 </body>
